ajout fonction edit

--- a/the-gossip-project/app/views/gossips/index.html.erb
+++ b/the-gossip-project/app/views/gossips/index.html.erb
@@ -13,6 +13,7 @@
       <td><%= gossip.anonymous_author %></td>
       <td><%= gossip.content %></td>
       <td><%= link_to 'Show', gossip_path(gossip) %></td>
+      <td><%= link_to 'Éditer le gossip', edit_gossip_path(gossip) %></td>
     </tr>
   <% end %>
 </table>
