--- a/members-2/app/views/layouts/application.html.erb
+++ b/members-2/app/views/layouts/application.html.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Members2</title>
-    <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+<%= render 'layouts/head' %>
+<%= render 'layouts/header' %>
+<body>
 
-  <body>
-    <%= yield %>
-  </body>
+    <div class="container">
+        <% flash.each do |message_type, message| %>
+            <div class="alert alert-<%= message_type %>"><%= message %></div>
+         <% end %>
+        <%= yield %>
+        <%= debug(params) if Rails.env.development? %>
+    </div>
+</body>
+
 </html>
